[gd_scene load_steps=4 format=3 uid="uid://bh4btjgp2xys3"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_wb2mm"]
[ext_resource type="PackedScene" uid="uid://dipny74p6hegq" path="res://scenes/enemy.tscn" id="2_q3hf8"]
[ext_resource type="PackedScene" uid="uid://cg6xtech7i3xi" path="res://scenes/waypoints.tscn" id="3_m84op"]

[node name="EnemySpawner" type="Node"]
script = ExtResource("1_wb2mm")
enemy_scene = ExtResource("2_q3hf8")
waypoints_scene = ExtResource("3_m84op")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpawnLine" type="Node" parent="."]

[node name="Point0" type="Marker2D" parent="SpawnLine"]
position = Vector2(72, 64)

[node name="Point1" type="Marker2D" parent="SpawnLine"]
position = Vector2(144, 64)

[node name="Point2" type="Marker2D" parent="SpawnLine"]
position = Vector2(216, 64)

[node name="Point3" type="Marker2D" parent="SpawnLine"]
position = Vector2(288, 64)

[node name="Point4" type="Marker2D" parent="SpawnLine"]
position = Vector2(360, 64)

[node name="Point5" type="Marker2D" parent="SpawnLine"]
position = Vector2(432, 64)

[node name="Point6" type="Marker2D" parent="SpawnLine"]
position = Vector2(504, 64)

[node name="Point7" type="Marker2D" parent="SpawnLine"]
position = Vector2(576, 64)

[node name="Point8" type="Marker2D" parent="SpawnLine"]
position = Vector2(648, 64)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
